# advent-of-code

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  ruff.toml
2023/day1/: script.py
2023/day10/: script.py
2023/day11/: script.py
2023/day12/: script.py
2023/day2/: script.py
2023/day3/: script.py
2023/day4/: script.py
2023/day5/: script.py
2023/day6/: script.py
2023/day7/: script.py
2023/day8/: script.py
2023/day9/: script.py
