[project]
name = "advent-of-code"
version = "2023.12.0"
description = ""
authors = [{ name = "Ferran Mirabent Rubinat", email = "ferran.miru@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
]
